# QueryGenie

./: .pdm-python  Dockerfile  LICENSE  README.md  database.py  pyproject.toml
.devcontainer/: devcontainer.json
output/: vectors.index
src/querygenie/: app.py  app1.py
src/querygenie/research/: doc_splitter.py  embeddings.py  extractpdf.py  faiss_store.py  install  search.py  text_retrive.py  text_upload.py  vectorizer.py
