[project]
name = "QueryGenie"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gokulnath,divyasri", email = "gokulnath30@gmail.com,divyasripraharsha@gmail.com"},
]
dependencies = [
    "streamlit>=1.37.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
