[project]
name = "QueryGenie"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gokulnath,divyasri", email = "gokulnath30@gmail.com,divyasripraharsha@gmail.com"},
]
dependencies = [
    "streamlit>=1.37.0",
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0.post1",
    "torch>=2.4.0",
    "langchain-community>=0.2.10",
    "pypdf>=4.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
